# kollrobot_controller

./: CMakeLists.txt  package.xml  setup.py
action/: GoPosition.action  PickBox.action  PlaceBox.action
launch/: calibrate_camera.launch  calibrate_camera_dev.launch  dev_kollro.launch  dev_kollro_live.launch  kollrobot_controller.launch  launch_qrcodereferencer.launch  launch_qrcodereferencers.launch  robotsimulation.launch  ur10_real_moveit .launch  ur5_real_moveit.launch
pysrc/kollrobot_controller/nodes/: KollrobotController.py  MesseDemo.py  nodeconfig.py  nodeconfig_calibrator.py  nodeconfig_messe.py
rvizcfg/: kollrobot_controller.rviz  kollrobot_controller_sole.rviz
scripts/: dev_demo_chain.py  messe_demo.py
src/: kollrobot_controller.cpp
src/actions/: BaseActionClass.cpp  BaseActionClass.h  CMakeLists.txt  GoPositionActionClass.cpp  GoPositionActionClass.h  PickBoxActionClass.cpp  PickBoxActionClass.h  PlaceBoxActionClass.cpp  PlaceBoxActionClass.h
src/controller/: CMakeLists.txt  KollrobotMoveGroup.cpp  KollrobotMoveGroup.h  PickBoxAction.cpp  PickBoxAction.h  PickBoxActionClass.cpp  PickBoxActionClass.h
src/helper/: CMakeLists.txt  TransformationHandler.cpp  TransformationHandler.h
srv/: CheckPosition.srv
yaml/: arm_controller_kollrobot.yaml  joint_state_controller.yaml  kollrobot_controller.yaml  kollrobot_controller_ropose.yaml
